objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Material_Type__c</fullName>
        <description>Container Material</description>
        <label>Material Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trash</fullName>
                </value>
                <value>
                    <fullName>Cardboard</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Metal</fullName>
                </value>
                <value>
                    <fullName>Co-Mingle</fullName>
                </value>
                <value>
                    <fullName>ABS Parts</fullName>
                </value>
                <value>
                    <fullName>ABS Sheets</fullName>
                </value>
                <value>
                    <fullName>Agricultural Waste</fullName>
                </value>
                <value>
                    <fullName>Aluminum</fullName>
                </value>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>Architectural Glass</fullName>
                </value>
                <value>
                    <fullName>Asbestos</fullName>
                </value>
                <value>
                    <fullName>Ash - Bottom Ash</fullName>
                </value>
                <value>
                    <fullName>Ash - Fly Ash</fullName>
                </value>
                <value>
                    <fullName>Asphalt</fullName>
                </value>
                <value>
                    <fullName>Bag in Box</fullName>
                </value>
                <value>
                    <fullName>Bags for Mixed Recyclables</fullName>
                </value>
                <value>
                    <fullName>Bags for Shredded Cans</fullName>
                </value>
                <value>
                    <fullName>Bags for Shredded Plastic</fullName>
                </value>
                <value>
                    <fullName>Bale Wire</fullName>
                </value>
                <value>
                    <fullName>Ballast</fullName>
                </value>
                <value>
                    <fullName>Batteries</fullName>
                </value>
                <value>
                    <fullName>Biodegradable Food Utensils</fullName>
                </value>
                <value>
                    <fullName>Bottles/Cans</fullName>
                </value>
                <value>
                    <fullName>Boxboard Cuttings</fullName>
                </value>
                <value>
                    <fullName>Brick</fullName>
                </value>
                <value>
                    <fullName>Bulk Material</fullName>
                </value>
                <value>
                    <fullName>Cans</fullName>
                </value>
                <value>
                    <fullName>Cans and Plastic Bottles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monday_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monday_Frequency__c</fullName>
        <label>Monday Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday_PM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monitored__c</fullName>
        <description>To determine if the haul is monitored</description>
        <formula>Is_Monitored__c = True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monitored?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_Relative_Interval__c</fullName>
        <label>Month Relative Interval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month_Relative_Interval</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month_Relative__c</fullName>
        <label>Month Relative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month_Relative</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Frequency__c</fullName>
        <formula>IF( ISPICKVAL(Occurrence_Type__c, &quot;Scheduled&quot;),
CASE(Frequency__c,
&quot;Daily&quot;,30/VALUE(Occurs__c),
&quot;Monthly&quot;, VALUE(Occurs__c)/12,
&quot;Yearly&quot;, VALUE(Occurs__c)/12, 1), 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Frequency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negotiater_ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Negotiater ContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Negotiater_UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Negotiater_UserId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Occurrence_Type_Formula__c</fullName>
        <formula>IF(  ISPICKVAL(Occurrence_Type__c, &apos;Scheduled&apos;)   || ISPICKVAL(Occurrence_Type__c, &apos;Scheduled On-Call&apos;), 
CASE(Frequency__c, 
&apos;Daily&apos;, (&apos;Scheduled&apos;+&apos;,&apos;+&apos;Every&apos;+&apos; &apos;+ Occurs__c +&apos;Day(s)&apos;), 
&apos;Weekly&apos;, (&apos;Scheduled&apos;+&apos;,&apos;+&apos;Every&apos;+&apos; &apos;+ Occurs__c+&apos;Week(s)&apos;+&apos;(&apos;+
(IF( CONTAINS( Core_Schedule__c, &apos;S&apos;) ,&apos;Sun,&apos;,&apos;&apos;)+
IF(CONTAINS( Core_Schedule__c, &apos;M&apos;),&apos;Mon,&apos;,&apos;&apos;)+
IF(CONTAINS( Core_Schedule__c, &apos;T&apos;),&apos;Tue,&apos;,&apos;&apos;)+
IF(CONTAINS( Core_Schedule__c, &apos;W&apos;),&apos;Wed,&apos;,&apos;&apos;)+
IF(CONTAINS( Core_Schedule__c, &apos;R&apos;),&apos;Thur,&apos;,&apos;&apos;)+
IF(CONTAINS( Core_Schedule__c, &apos;F&apos;),&apos;Fri,&apos;,&apos;&apos;)+
IF(CONTAINS( Core_Schedule__c, &apos;SA&apos;),&apos;Sat&apos;,&apos;&apos;))+&apos;)&apos;),
&apos;Monthly&apos;, (&apos;Scheduled&apos;+&apos;,&apos;+ Occurs__c+&apos;x/Month&apos;),
&apos;Year&apos;, (&apos;Scheduled&apos;+&apos;,&apos;+ Occurs__c+&apos;x/Year&apos;),NULL) ,  
IF(ISPICKVAL(Occurrence_Type__c, &apos;On-Call&apos;), &apos;On-Call&apos;, NULL) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Occurrence Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurrence_Type__c</fullName>
        <label>Occurrence Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>On-Call</fullName>
                </value>
                <value>
                    <fullName>Scheduled On-Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <label>Occurrence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurs__c</fullName>
        <label>Occurs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Of_Every1__c</fullName>
        <label>Of Every1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_Every2__c</fullName>
        <label>Of Every2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_Every3__c</fullName>
        <label>Of Every3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_Month__c</fullName>
        <label>Of Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Date__c</fullName>
        <label>On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Day1__c</fullName>
        <label>On Day1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Day2__c</fullName>
        <label>On Day2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Day3__c</fullName>
        <label>On Day3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_the__c</fullName>
        <label>On the</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override UserId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets_Override_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Currency__c</fullName>
        <label>Price Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Increment_1__c</fullName>
        <label>Price Increment 1</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Increment_2__c</fullName>
        <label>Price Increment 2</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Increment_3__c</fullName>
        <label>Price Increment 3</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Minimum_Quantity__c</fullName>
        <label>Price Minimum Quantity</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Model_Type__c</fullName>
        <label>Price Model Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Price</fullName>
                </value>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Rebate</fullName>
                </value>
                <value>
                    <fullName>Stepped</fullName>
                </value>
                <value>
                    <fullName>Zero Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Price_1__c</fullName>
        <label>Price Price 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Price_2__c</fullName>
        <label>Price Price 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Price_3__c</fullName>
        <label>Price Price 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Tax_Inclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Tax Inclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Total_Tax__c</fullName>
        <label>Price Total Tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Unit__c</fullName>
        <label>Price Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_UpTo_1__c</fullName>
        <label>Price UpTo 1</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_UpTo_2__c</fullName>
        <label>Price UpTo 2</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_UpTo_3__c</fullName>
        <label>Price UpTo 3</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Code__c.Client_Account__r.RecordTypeId</field>
                <operation>equals</operation>
                <value>Client</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Header</value>
            </filterItems>
            <filterItems>
                <field>Project_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Project Code Detail</value>
            </filterItems>
            <filterItems>
                <field>Project_Code__c.Duration__c</field>
                <operation>contains</operation>
                <valueField>$Source.Duration__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Code__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Project that created Container</description>
        <label>Project</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change__c</fullName>
        <label>Reason for Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Time_of_Day__c</fullName>
        <label>Required Time of Day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restriction__c</fullName>
        <formula>Location__r.Restriction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Restriction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBID_text_c__c</fullName>
        <description>Formula field to convert SBID number field to text</description>
        <formula>TEXT(	Acorn_SBID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBID text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Additional Discount for this Asset, if expressed as an amount</description>
        <inlineHelpText>Additional Discount for this Asset, if expressed as an amount</inlineHelpText>
        <label>Additional Disc. (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</description>
        <inlineHelpText>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</inlineHelpText>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundledQuantity__c</fullName>
        <description>For items with calculated quantities this field hold the original (user entered) quantity.</description>
        <inlineHelpText>For items with calculated quantities this field holds the original quantity entered by the user.</inlineHelpText>
        <label>Original Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items are zero price and do not allow price or quantity to be edited.</description>
        <inlineHelpText>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items have a zero price and do not allow price or quantity to be edited.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.  This is a system field that is derived from the associated product.</description>
        <inlineHelpText>The type of the product charge.  This is a system field that is derived from the associated product.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CombineKey__c</fullName>
        <externalId>true</externalId>
        <label>Combine Key</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentDiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes additional discount for this component to the parent package discount.</description>
        <inlineHelpText>Fixes additional discount for this component to the parent package discount.</inlineHelpText>
        <label>Component Discounted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreditProductId__c</fullName>
        <description>ID of upgrade credit product for this asset.</description>
        <formula>Product2.SBQQ__UpgradeCredit__c</formula>
        <label>Credit Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CurrentSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription that currently covers this asset. This field is only populated if one and only one subscription covers this asset. Renewals will overwrite with new subscription.</description>
        <inlineHelpText>Subscription that currently covers this asset. Automatically populated if one and only one subscription covers this asset. Renewals will overwrite with new subscription.</inlineHelpText>
        <label>Current Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Covered Assets</relationshipLabel>
        <relationshipName>CoveredAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Dimension__c</fullName>
        <description>Name of the Price Dimension that originated this Asset</description>
        <formula>SBQQ__QuoteLine__r.SBQQ__Dimension__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Price Dimension that originated this Asset</inlineHelpText>
        <label>Price Dimension Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountScheduleType__c</fullName>
        <description>Discount schedule type. Must be a stored value because it&apos;s used in formula fields that are rolled up.</description>
        <inlineHelpText>Discount schedule type. Copied from Type field in associated discount schedule.</inlineHelpText>
        <label>Discount Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</description>
        <inlineHelpText>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Additional Discount for this Asset, if expressed as a percentage</description>
        <inlineHelpText>Additional Discount for this Asset, if expressed as a percentage</inlineHelpText>
        <label>Additional Disc. (%)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>Discount to be taken on top of the Partner Discount.</description>
        <inlineHelpText>Discount to be taken on top of the Partner Discount.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DynamicOptionId__c</fullName>
        <description>Contains feature id and product id to identify the feature and optional SKU associated with this line.</description>
        <inlineHelpText>Identifies feature and dynamic option for this line.</inlineHelpText>
        <label>Dynamic Option ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FromServiceCloud__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether Service Cloud was enabled when this Asset was created.</description>
        <inlineHelpText>Determines whether Service Cloud was enabled when this Asset was created.</inlineHelpText>
        <label>From Service Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__LatestQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Assets (Latest Quote Line)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListPrice__c</fullName>
        <description>List price for this Asset product.</description>
        <inlineHelpText>List price for this Asset product.</inlineHelpText>
        <label>List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupAmount__c</fullName>
        <description>Markup for this Asset, if expressed as an amount</description>
        <inlineHelpText>Markup for this Asset, if expressed as an amount</inlineHelpText>
        <label>Markup (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupRate__c</fullName>
        <description>Markup for this Asset, if expressed as a percentage</description>
        <inlineHelpText>Markup for this Asset, if expressed as a percentage</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__Number__c</fullName>
        <description>Number indicating this line&apos;s position within its group or quote.</description>
        <inlineHelpText>Number indicating this line&apos;s position within its group or quote.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionDiscountAmount__c</fullName>
        <description>Discount extended on this product because it&apos;s part of a package.</description>
        <inlineHelpText>Discount extended on this product because it&apos;s part of a package.</inlineHelpText>
        <label>Option Discount (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionDiscount__c</fullName>
        <description>If this line is for an optional SKU, this field captures any discount given to the package and extended to the option.</description>
        <inlineHelpText>If this line is for an optional SKU, this field captures any discount given to the package and extended to the option.</inlineHelpText>
        <label>Option Discount (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionLevel__c</fullName>
        <description>Indicates nest level of this option (only applies to lines that are generated from options).</description>
        <inlineHelpText>Indicates nest level of this option (only applies to lines that are generated from options).</inlineHelpText>
        <label>Option Level</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionType__c</fullName>
        <description>Indicates the Option Type, which is copied from related Product Option. Determines how quantity is calculated.</description>
        <inlineHelpText>Indicates the Option Type, which is copied from related Product Option. Determines how quantity is calculated.</inlineHelpText>
        <label>Option Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Related Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OriginalUnitCost__c</fullName>
        <description>Original unit cost of the Asset at the time of purchase before Cost Schedules were applied.</description>
        <inlineHelpText>Original unit cost of the Asset at the time of purchase before Cost Schedules were applied.</inlineHelpText>
        <label>Original Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__PackageProductCode__c</fullName>
        <description>Product code for the package generated by appending codes of selected components according to specified pattern.</description>
        <inlineHelpText>A code listing each of this package&apos;s components based on their component codes.</inlineHelpText>
        <label>Package Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PackageProductDescription__c</fullName>
        <description>Product Description for the package generated by appending descriptions of selected components according to specified pattern.</description>
        <inlineHelpText>A description of each component in this package.</inlineHelpText>
        <label>Package Product Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__PartnerDiscount__c</fullName>
        <description>Partner discounts are applied after all automatic and discretionary discounts. The partner discount is taken into account in the Partner Price.</description>
        <inlineHelpText>Partner discounts are applied after all automatic and discretionary discounts. The partner discount is taken into account in the Partner Price.</inlineHelpText>
        <label>Partner Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceDimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <description>Determines how the price for this line item is set. &quot;List&quot; = calculated by subtracting discount from list price. &quot;Cost&quot;  = calculated by adding markup to cost.</description>
        <inlineHelpText>Indicates how the price for this line item is calculated. &quot;List&quot; = subtracting discount from list price. &quot;Cost&quot; = adding markup to cost.</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product option that generated this line (if any).</description>
        <inlineHelpText>Product option that generated this line (if any).</inlineHelpText>
        <label>Product Option</label>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this asset.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>